--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-        
+This is a simple app that was remissioned to show some ndb features.
+
+BTW, the Elo rating implementation is, AFAIK, broken. Do not attempt to use it to rank chess players or any other serious activity.
